India standardized & tweaked + 29 portraits added

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -1003,22 +1003,22 @@
     SIN_cn_ADJ:0 "Kalati"
     SIN_an_ADJ:0 "Kalati"
 
-    GUJ_ni:0 "Baroda"
-    GUJ_ni_DEF:0 "The Baroda State"
+    GUJ_ni:0 "Gujarat Commission"
+    GUJ_ni_DEF:0 "The All-German Commission in Gujarat"
     GUJ_ds:0 "Gujarat Commission"
-    GUJ_ds_DEF:0 "the Gujarat Commission"
-    GUJ_rc:0 "Baroda"
-    GUJ_rc_DEF:0 "Baroda State"
-    GUJ_an:0 "Baroda"
-    GUJ_an_DEF:0 "The Baroda State"
-    GUJ_cn:0 "Baroda"
-    GUJ_cn_DEF:0 "The Baroda State"
-    GUJ_lb:0 "Baroda"
-    GUJ_lb_DEF:0 "The Baroda State"
-    GUJ_ss:0 "Baroda"
-    GUJ_ss_DEF:0 "The Baroda State"
-    GUJ_jc:0 "Baroda"
-    GUJ_jc_DEF:0 "The Baroda State"
+    GUJ_ds_DEF:0 "The All-German Commission in Gujarat"
+    GUJ_rc:0 "Gujarat Commission"
+    GUJ_rc_DEF:0 "The All-German Commission in Gujarat"
+    GUJ_an:0 "Gujarat Commission"
+    GUJ_an_DEF:0 "The All-German Commission in Gujarat"
+    GUJ_cn:0 "Gujarat Commission"
+    GUJ_cn_DEF:0 "The All-German Commission in Gujarat"
+    GUJ_lb:0 "Gujarat Commission"
+    GUJ_lb_DEF:0 "The All-German Commission in Gujarat"
+    GUJ_ss:0 "Gujarat Commission"
+    GUJ_ss_DEF:0 "The All-German Commission in Gujarat"
+    GUJ_jc:0 "Gujarat Commission"
+    GUJ_jc_DEF:0 "The All-German Commission in Gujarat"
     GUJ_ni_ADJ:0 "Gujarati"
     GUJ_rc_ADJ:0 "Gujarati"
     GUJ_lb_ADJ:0 "Gujarati"
@@ -1053,21 +1053,21 @@
     PUN_cn_ADJ:0 "Punjabi"
     PUN_an_ADJ:0 "Punjabi"
 
-    HYD_ni:0 "Hyderabad"
+    HYD_ni:0 "Hyderabad Deccan"
     HYD_ni_DEF:0 "The State of Hyderabad"
-    HYD_ds:0 "Hyderabad"
+    HYD_ds:0 "Hyderabad Deccan"
     HYD_ds_DEF:0 "The State of Hyderabad"
-    HYD_rc:0 "Hyderabad"
+    HYD_rc:0 "Hyderabad Deccan"
     HYD_rc_DEF:0 "The State of Hyderabad"
-    HYD_an:0 "Hyderabad "
+    HYD_an:0 "Hyderabad Deccan"
     HYD_an_DEF:0 "The State of Hyderabad"
     HYD_cn:0 "Hyderabad Deccan"
     HYD_cn_DEF:0 "Hyderabad Deccan"
-    HYD_lb:0 "Hyderabad"
+    HYD_lb:0 "Hyderabad Deccan"
     HYD_lb_DEF:0 "The State of Hyderabad"
-    HYD_ss:0 "Hyderabad"
+    HYD_ss:0 "Hyderabad Deccan"
     HYD_ss_DEF:0 "The State of Hyderabad"
-    HYD_jc:0 "Hyderabad"
+    HYD_jc:0 "Hyderabad Deccan"
     HYD_jc_DEF:0 "The State of Hyderabad"
     HYD_ni_ADJ:0 "Deccan"
     HYD_rc_ADJ:0 "Deccan"
@@ -1078,22 +1078,22 @@
     HYD_cn_ADJ:0 "Deccan"
     HYD_an_ADJ:0 "Deccan"
 
-    AWD_ni:0 "Republic of South India"
-    AWD_ni_DEF:0 "Republic of South India"
-    AWD_ds:0 "Republic of South India"
-    AWD_ds_DEF:0 "Republic of South India"
-    AWD_rc:0 "Republic of South India"
-    AWD_rc_DEF:0 "Republic of South India"
-    AWD_an:0 "Republic of South India"
-    AWD_an_DEF:0 "Republic of South India"
-    AWD_cn:0 "Republic of South India"
-    AWD_cn_DEF:0 "Republic of South India"
+    AWD_ni:0 "Righteous Union"
+    AWD_ni_DEF:0 "The Righteous Union"
+    AWD_ds:0 "Righteous Union"
+    AWD_ds_DEF:0 "The Righteous Union"
+    AWD_rc:0 "Righteous Union"
+    AWD_rc_DEF:0 "The Righteous Union"
+    AWD_an:0 "Righteous Union"
+    AWD_an_DEF:0 "The Righteous Union"
+    AWD_cn:0 "Righteous Union"
+    AWD_cn_DEF:0 "The Righteous Union"
     AWD_lb:0 "Righteous Union"
     AWD_lb_DEF:0 "the Righteous Union"
-    AWD_ss:0 "Republic of South India"
-    AWD_ss_DEF:0 "Republic of South India"
-    AWD_jc:0 "Republic of South India"
-    AWD_jc_DEF:0 "Republic of South India"
+    AWD_ss:0 "Righteous Union"
+    AWD_ss_DEF:0 "the Righteous Union"
+    AWD_jc:0 "Righteous Union"
+    AWD_jc_DEF:0 "the Righteous Union"
     AWD_ni_ADJ:0 "South-Indian"
     AWD_rc_ADJ:0 "South-Indian"
     AWD_lb_ADJ:0 "South-Indian"
@@ -1103,22 +1103,22 @@
     AWD_cn_ADJ:0 "South-Indian"
     AWD_an_ADJ:0 "South-Indian"
 
-    ORI_ni:0 "Orissa"
-    ORI_ni_DEF:0 "The State of Orissa"
+    ORI_ni:0 "Carnatic Sultanate"
+    ORI_ni_DEF:0 "The Carnatic Sultanate"
     ORI_ds:0 "Carnatic Sultanate"
-    ORI_ds_DEF:0 "the Carnatic Sultanate"
-    ORI_rc:0 "Orissa"
-    ORI_rc_DEF:0 "The State of Orissa"
-    ORI_an:0 "Orissa "
-    ORI_an_DEF:0 "The State of Orissa"
-    ORI_cn:0 "Orissa"
-    ORI_cn_DEF:0 "The State of Orissa"
-    ORI_lb:0 "Orissa"
-    ORI_lb_DEF:0 "The State of Orissa"
-    ORI_ss:0 "Orissa"
-    ORI_ss_DEF:0 "The State of Orissa"
-    ORI_jc:0 "Carnatic Sultanate"
-    ORI_jc_DEF:0 "the Carnatic Sultanate"
+    ORI_ds_DEF:0 "The Carnatic Sultanate"
+    ORI_rc:0 "Carnatic Sultanate"
+    ORI_rc_DEF:0 "The Carnatic Sultanate"
+    ORI_an:0 "Carnatic Sultanate "
+    ORI_an_DEF:0 "The Carnatic Sultanate"
+    ORI_cn:0 "Carnatic Sultanate"
+    ORI_cn_DEF:0 "The Carnatic Sultanate"
+    ORI_lb:0 "Carnatic Sultanate"
+    ORI_lb_DEF:0 "The Carnatic Sultanate"
+    ORI_ss:0 "All-Indian Republic of Orissa"
+    ORI_ss_DEF:0 "The All-Indian Republic of Orissa"
+    ORI_jc:0 "All-Indian Republic of Orissa"
+    ORI_jc_DEF:0 "The All-Indian Republic of Orissa"
     ORI_ni_ADJ:0 "Orissan"
     ORI_rc_ADJ:0 "Orissan"
     ORI_lb_ADJ:0 "Orissan"
@@ -1128,12 +1128,12 @@
     ORI_cn_ADJ:0 "Orissan"
     ORI_an_ADJ:0 "Orissan"
 
-    NEP_ni:0 "Nepal"
-    NEP_ni_DEF:0 "The Kingdom of Nepal"
+    NEP_ni:0 "Gorkha Kingdom"
+    NEP_ni_DEF:0 "The Gorkha Kingdom"
     NEP_ds:0 "Gorkha Kingdom"
-    NEP_ds_DEF:0 "the Gorkha Kingdom"
-    NEP_rc:0 "Nepal"
-    NEP_rc_DEF:0 "The Kingdom of Nepal"
+    NEP_ds_DEF:0 "The Gorkha Kingdom"
+    NEP_rc:0 "Gorkha Kingdom"
+    NEP_rc_DEF:0 "The Gorkha Kingdom"
     NEP_an:0 "Nepal "
     NEP_an_DEF:0 "The Kingdom of Nepal"
     NEP_cn:0 "Nepal"
@@ -3352,22 +3352,22 @@
     MYS_cn_ADJ:0 "Mysorian"
     MYS_an_ADJ:0 "Mysorian"
 
-    MAR_ni:0 "Maratha Confederacy"
-    MAR_ni_DEF:0 "the Maratha Confederacy"
-    MAR_ds:0 "Maratha Confederacy"
-    MAR_ds_DEF:0 "the Maratha Confederacy"
+    MAR_ni:0 "Gwalior Confederation"
+    MAR_ni_DEF:0 "the Gwalior Confederation"
+    MAR_ds:0 "Gwalior Confederation"
+    MAR_ds_DEF:0 "the Gwalior Confederation"
     MAR_rc:0 "Gwalior Confederation"
     MAR_rc_DEF:0 "the Gwalior Confederation"
-    MAR_an:0 "Maratha Confederacy"
-    MAR_an_DEF:0 "the Maratha Confederacy"
-    MAR_cn:0 "Maratha Confederacy"
-    MAR_cn_DEF:0 "the Maratha Confederacy"
-    MAR_lb:0 "Maratha Confederacy"
-    MAR_lb_DEF:0 "the Maratha Confederacy"
-    MAR_ss:0 "Maratha Confederacy"
-    MAR_ss_DEF:0 "the Maratha Confederacy"
-    MAR_jc:0 "Maratha Republic"
-    MAR_jc_DEF:0 "the Maratha Republic"
+    MAR_an:0 "Gwalior Confederation"
+    MAR_an_DEF:0 "the Gwalior Confederation"
+    MAR_cn:0 "Gwalior Confederation"
+    MAR_cn_DEF:0 "the Gwalior Confederation"
+    MAR_lb:0 "Gwalior Confederation"
+    MAR_lb_DEF:0 "the Gwalior Confederation"
+    MAR_ss:0 "Gwalior Confederation"
+    MAR_ss_DEF:0 "the Gwalior Confederation"
+    MAR_jc:0 "Gwalior Confederation"
+    MAR_jc_DEF:0 "the Gwalior Confederation"
     MAR_ni_ADJ:0 "Indian"
     MAR_rc_ADJ:0 "Indian"
     MAR_lb_ADJ:0 "Indian"
@@ -3432,22 +3432,22 @@
     MDR_cn_ADJ:0 "Anglo-Indian"
     MDR_an_ADJ:0 "Anglo-Indian"
 
-    SKM_ni:0 "Sikkim"
-    SKM_ni_DEF:0 "The Kingdom of Sikkim"
-    SKM_ds:0 "Sikkim"
-    SKM_ds_DEF:0 "The Kingdom of Sikkim"
-    SKM_rc:0 "Sikkim"
-    SKM_rc_DEF:0 "The Kingdom of Sikkim"
-    SKM_an:0 "Sikkim"
-    SKM_an_DEF:0 "The Kingdom of Sikkim"
-    SKM_cn:0 "Sikkim"
-    SKM_cn_DEF:0 "The Kingdom of Sikkim"
-    SKM_lb:0 "Sikkim"
-    SKM_lb_DEF:0 "The Kingdom of Sikkim"
-    SKM_ss:0 "Sikkim"
-    SKM_ss_DEF:0 "The Kingdom of Sikkim"
-    SKM_jc:0 "Sikkim"
-    SKM_jc_DEF:0 "The Union of Sikkim"
+    SKM_ni:0 "Dremoshong"
+    SKM_ni_DEF:0 "The Kingdom of Dremoshong"
+    SKM_ds:0 "Dremoshong"
+    SKM_ds_DEF:0 "The Kingdom of Dremoshong"
+    SKM_rc:0 "Dremoshong"
+    SKM_rc_DEF:0 "The Kingdom of Dremoshong"
+    SKM_an:0 "Dremoshong"
+    SKM_an_DEF:0 "The Kingdom of Dremoshong"
+    SKM_cn:0 "Dremoshong"
+    SKM_cn_DEF:0 "The Kingdom of Dremoshong"
+    SKM_lb:0 "Dremoshong"
+    SKM_lb_DEF:0 "The Kingdom of Dremoshong"
+    SKM_ss:0 "Denjong"
+    SKM_ss_DEF:0 "The Sacred Realm of Free Denjong"
+    SKM_jc:0 "Denjong"
+    SKM_jc_DEF:0 "The Sacred Realm of Free Denjong"
     SKM_ni_ADJ:0 "Indian"
     SKM_rc_ADJ:0 "Indian"
     SKM_lb_ADJ:0 "Indian"
@@ -3457,22 +3457,22 @@
     SKM_cn_ADJ:0 "Indian"
     SKM_an_ADJ:0 "Indian"
 
-    BDK_ni:0 "Bundelkhand State"
-    BDK_ni_DEF:0 "The Bundelkhand State"
-    BDK_ds:0 "Bundelkhand State"
-    BDK_ds_DEF:0 "The Bundelkhand State"
-    BDK_rc:0 "The Iron Caste"
+    BDK_ni:0 "Iron Caste"
+    BDK_ni_DEF:0 "The Iron Caste"
+    BDK_ds:0 "Iron Caste"
+    BDK_ds_DEF:0 "The Iron Caste"
+    BDK_rc:0 "Iron Caste"
     BDK_rc_DEF:0 "The Iron Caste"
-    BDK_an:0 "Bundelkhand State"
-    BDK_an_DEF:0 "The Bundelkhand State"
-    BDK_cn:0 "The Iron Caste"
+    BDK_an:0 "Iron Caste"
+    BDK_an_DEF:0 "The Iron Caste"
+    BDK_cn:0 "Iron Caste"
     BDK_cn_DEF:0 "The Iron Caste"
-    BDK_lb:0 "Bundelkhand State"
-    BDK_lb_DEF:0 "The Bundelkhand State"
-    BDK_ss:0 "Bundelkhand State"
-    BDK_ss_DEF:0 "The Bundelkhand State"
-    BDK_jc:0 "Bundelkhand Republic"
-    BDK_jc_DEF:0 "The Bundelkhand Republic"
+    BDK_lb:0 "Iron Caste"
+    BDK_lb_DEF:0 "The Iron Caste"
+    BDK_ss:0 "Iron Caste"
+    BDK_ss_DEF:0 "The Iron Caste"
+    BDK_jc:0 "Iron Caste"
+    BDK_jc_DEF:0 "The Iron Caste"
     BDK_ni_ADJ:0 "Indian"
     BDK_rc_ADJ:0 "Indian"
     BDK_lb_ADJ:0 "Indian"
@@ -3893,15 +3893,15 @@
     FOM_rc:0 "Anti-Reformist Alliance"
     FOM_rc_DEF:0 "The Anti-Reformist Alliance"
     FOM_cn:0 "Swarajya Goverment of National Resistance"
-    FOM_cn_DEF:0 "the Swarajya Goverment of National Resistance"
-    FOM_lb:0 "Free Officer's Alliance"
-    FOM_lb_DEF:0 "The Free Officer's Alliance"
-    FOM_an:0 "Free Officer's Alliance"
-    FOM_an_DEF:0 "The Free Officer's Alliance"
-    FOM_ss:0 "Free Officer's Alliance"
-    FOM_ss_DEF:0 "The Free Officer's Alliance"
-    FOM_jc:0 "Free Officer's Alliance"
-    FOM_jc_DEF:0 "The Free Officer's Alliance"
+    FOM_cn_DEF:0 "The Swarajya Goverment of National Resistance"
+    FOM_lb:0 "Swarajya Goverment of National Resistance"
+    FOM_lb_DEF:0 "The Swarajya Goverment of National Resistance"
+    FOM_an:0 "Swarajya Goverment of National Resistance"
+    FOM_an_DEF:0 "The Swarajya Goverment of National Resistance"
+    FOM_ss:0 "Swarajya Goverment of National Resistance"
+    FOM_ss_DEF:0 "The Swarajya Goverment of National Resistance"
+    FOM_jc:0 "Swarajya Goverment of National Resistance"
+    FOM_jc_DEF:0 "The Swarajya Goverment of National Resistance"
     FOM_ni_ADJ:0 "Indian"
     FOM_ds_ADJ:0 "Indian"
     FOM_rc_ADJ:0 "Indian"
