--- a/localisation/english/unit_l_english.yml
+++ b/localisation/english/unit_l_english.yml
@@ -328,6 +328,8 @@
  cavalry_desc:0 "Horse mounted infantry. More expensive, but with good mobility."
  camelry:0 "Camelry"
  camelry_desc:0 "Camel mounted infantry. More expensive, but with good versatility."
+ elephantry: "Elephantry"
+ elephantry_desc: "Elephant mounted Infan
  light_armor:0 "Light Landship"
  light_armor_desc:0 "Lightly armored tanks."
  medium_armor:0 "Medium Landship"
