--- a/localisation/english/PB_country_specific/India/PB_Bhopal_l_english.yml
+++ b/localisation/english/PB_country_specific/India/PB_Bhopal_l_english.yml
@@ -5,5 +5,6 @@
   ######################
 
   ### LEADERS ###
+  BHP_salvadore_bhopal_bourbon: "Salvadore III"
   BHP_yashwant_rao_holkar: "Yashwant Rao Holkar II"
   
