main menu tweaks

--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -103,6 +103,7 @@
   POLL: "Next Pax Patch/Update Poll - Community Input"
   PAX_DISCORD: "Pax Britannica Discord"
   PAX_REDDIT: "Pax Britannica Reddit"
+  IMD_DISCORD: "IMD Collective Discord"
 
   patchnotes_tt: "§HWhat's New in Patch 1.4:§!\n\n"
   patchnotes_tt_delayed: "§OTBA§!"
