Too many Balkan VPS

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -151,14 +151,20 @@
  VICTORY_POINTS_3423: "Koblenz"
 #43 - BUDAPEST
  VICTORY_POINTS_9660: "Budapest"
+ VICTORY_POINTS_6716: "Szolnok"
 #44 - GHEGERIA
  VICTORY_POINTS_9914: "Tirana"
 #45 - VOJVODINA
  VICTORY_POINTS_3617: "Novi Sad"
 #46 - MUNTENIA
  VICTORY_POINTS_9617: "Bucharest"
+ VICTORY_POINTS_3639: "Pitesti"
+ VICTORY_POINTS_6658: "Giurgiu"
+ VICTORY_POINTS_6677: "Călărasi"
 #47 - ATTICA
  VICTORY_POINTS_4109: "Athens"
+ VICTORY_POINTS_3988: "Piraeus"
+ VICTORY_POINTS_7127: "Chalcis"
  VICTORY_POINTS_976: "Lamia"
 #48 - SOFIA
  VICTORY_POINTS_949: "Sofia"
@@ -254,10 +260,16 @@
  VICTORY_POINTS_3707: "Kishinev"
 #79 - MOLDOVA
  VICTORY_POINTS_6706: "Galati"
+ VICTORY_POINTS_9701: "Focsani"
+ VICTORY_POINTS_3741: "Bacău"
  VICTORY_POINTS_9716: "Iasi"
+ VICTORY_POINTS_6584: "Botosani"
 #80 - BUCOVINA
+VICTORY_POINTS_9548: "Chernivtsi"
 #81 - OLTENIA
  VICTORY_POINTS_6652: "Craiova"
+ VICTORY_POINTS_11657: "Drobeta Turnu Severin"
+ VICTORY_POINTS_11605: "Târgu Jiu"
 #82 - BANAT
  VICTORY_POINTS_9606: "Temesvár"
 #83 - KREISCHGEBIET
@@ -321,11 +333,12 @@
  VICTORY_POINTS_9809: "Podgorica"
 #106 - VARDAR
  VICTORY_POINTS_3882: "Shkupi"
+ VICTORY_POINTS_974: "Bitola"
 #107 - BELGRADE
  VICTORY_POINTS_11586: "Belgrade"
  VICTORY_POINTS_6970: "Kragujevac"
 #108 - MORAVA
- VICTORY_POINTS_9906: "Niš"
+ VICTORY_POINTS_11857: "Vranje" 
 #109 - CROATIA
  VICTORY_POINTS_11581: "Zagreb"
 #110 - OSTLANDET
@@ -587,10 +600,12 @@
 #185 - EPIRUS
  VICTORY_POINTS_10203: "Corfu"
  VICTORY_POINTS_3914: "Ioannina"
+ VICTORY_POINTS_9805: "Igoumenitsa"
 #186 - PELOPONNESE
  VICTORY_POINTS_7211: "Patras"
  VICTORY_POINTS_11965: "Kalamata"
 #187 - WEST AEGEAN ISLANDS
+ VICTORY_POINTS_3401: "Ermoupoli"
 #188 - MEMEL
 #189 - ZHEMAITIYA
  VICTORY_POINTS_9483: "Shavli"
@@ -647,9 +662,14 @@
 #210 - NEVEL
  VICTORY_POINTS_11234: "Velikiye Luki"
 #211 - BURGAS
+ VICTORY_POINTS_11842: "Edirne"
  VICTORY_POINTS_9902: "Burgas"
+ VICTORY_POINTS_9888: "Yambol"
+ VICTORY_POINTS_6927: "Silven"
 #212 - PLOVDIV
  VICTORY_POINTS_9862: "Haskovo"
+ VICTORY_POINTS_6814: "Stara Zagora"
+ VICTORY_POINTS_3937: "Pasardschik"
  VICTORY_POINTS_6923: "Plovdiv"
 #213 - KUOLA
  VICTORY_POINTS_9201: "Apatity"
@@ -2123,6 +2143,7 @@
 #730 - ST PIERRE AND MIQUELON
 #731 - THESSALONIKI
  VICTORY_POINTS_11818: "Thessaloniki"
+ VICTORY_POINTS_895: "Poligiros"
 #732 - PAMIR
 #733 - ANDAMAN
 #734 - NENDO
@@ -2339,7 +2360,8 @@
  VICTORY_POINTS_2097: "Baghdad"
  VICTORY_POINTS_13282: "Baquba"
 #821 - EAST THRACE
- VICTORY_POINTS_11842: "Edirne"
+ VICTORY_POINTS_6895: "Tiroloi"
+ VICTORY_POINTS_3879: "Rhaidestos"
 #822 - TROAS
  VICTORY_POINTS_6864: "Dardanellia"
 #823 - AYDIN
@@ -2845,6 +2867,7 @@
  VICTORY_POINTS_6647: "Osijek"
 #1030 - RIJEKA
 #1031 - POZAREVAC
+ VICTORY_POINTS_11887: "Niš"
 #1032 - SOUTH TRANSDANUBIA
  VICTORY_POINTS_11610: "Pecs"
 #1033 - CLUJ
@@ -2853,23 +2876,35 @@
  VICTORY_POINTS_690: "Brasov"
 #1035 - SZEKLERLAND
 #1036 - SOUTH BUKOVINA
+ VICTORY_POINTS_6761: "Suceava"
 #1037 - PLOESTI
+ VICTORY_POINTS_9651: "Buzău"
+ VICTORY_POINTS_6695: "Râmnicu Vâlcea"
+ VICTORY_POINTS_14790: "Brăila"
 #1038 - CONSTANTA
  VICTORY_POINTS_657: "Constanta"
 #1039 - TULCEA
  VICTORY_POINTS_687: "Tulcea"
 #1040 - VARNA
  VICTORY_POINTS_9783: "Varna"
+ VICTORY_POINTS_9612: "Ruse"
 #1041 - PLEVEN
  VICTORY_POINTS_3796: "Pleven"
+ VICTORY_POINTS_6842: "Veliko Tarnovo"
 #1042 - PIRIN
+ VICTORY_POINTS_935: "Pernik"
+ VICTORY_POINTS_6857: "Blagoevgrad"
 #1043 - SOUTH MACEDONIA
+ VICTORY_POINTS_3844: "Katerini"
+ VICTORY_POINTS_966: "Kozani"
 #1044 - AKARNANIA
+VICTORY_POINTS_1205: "Mesolongi"
 #1045 - THESSALY
  VICTORY_POINTS_863: "Larisa"
  VICTORY_POINTS_3973: "Volos"
 #1046 - EAST AEGAN ISLANDS
- VICTORY_POINTS_6550: "Chios"
+ VICTORY_POINTS_6550: "Vathy"
+ VICTORY_POINTS_14360: "Chios"
  VICTORY_POINTS_8435: "Mytilini"
 #1047 - TOSKERIA
  VICTORY_POINTS_11767: "Vlorë"
@@ -3080,6 +3115,8 @@
  VICTORY_POINTS_9239: "Reading"
 #1201 - NORTH WALES
  VICTORY_POINTS_6363: "Carnarvon"
+#1209 - NORTHERN EPIRUS
+ VICTORY_POINTS_6900: "Korca"
 #1212 - TABASCO
  VICTORY_POINTS_14466: "San Juan Bautista"
 #1212 - PETEN
@@ -4447,7 +4484,6 @@
  VICTORY_POINTS_9930:0 "Kavala"
  VICTORY_POINTS_11965:0 "Kalamata"
  VICTORY_POINTS_8435:0 "Mytilini"
- VICTORY_POINTS_6550:0 "Chios"
  VICTORY_POINTS_11842:0 "Edirne"
  VICTORY_POINTS_9862:0 "Haskovo"
  VICTORY_POINTS_9902:0 "Burgas"
