Generic Checks and Additions

--- a/localisation/english/PB_Generic_Focus_l_english.yml
+++ b/localisation/english/PB_Generic_Focus_l_english.yml
@@ -44,6 +44,11 @@ PB_All_Or_Nothing_Tactics:0 "All or Nothing Tactics"
 PB_Request_French_Support:0 "Request French Support"
 PB_The_Dust_Settles:0 "The Dust Settles"
 
+
+## Tooltips
+
+united_www_great_state_tt:0 "§YUnified the Wild West as a Wild West Nation§!"
+
 #############################
 #          FOCUS            #
 #############################
