--- a/localisation/english/PB_annexations_l_english.yml
+++ b/localisation/english/PB_annexations_l_english.yml
@@ -48,6 +48,8 @@
   annexation_acadia: "The Fate of Acadia"
   annexation_acadia_desc: "The region of Acadia has been brought under our control as our troops occupy the region. We must now decide what to do with it."
   annexation.1100.a: "Liberate Acadia"
+  annexation.1100.b: "Give it to the United Commonwealth"
+  annexation.1100.c: "Give it to the Free States"
 
 
   #Events
