India & Bhutan characters/portraits tweaks

--- a/localisation/english/PB_country_specific/PB_Bhutan_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Bhutan_l_english.yml
@@ -1,10 +1,9 @@
-﻿ l_english:
-  
+﻿l_english:
+
   ######################
   ####  CHARACTERS  ####
   ######################
 
   ### LEADERS ###
-  JBP_mister_sandman: "Mister Sandman"
-  JBP_hyde_gowan: "Hyde Gowan"
+  BHU_jigme_wangchuck: "Jigme Wangchuck"
   
