Peace Deal Work I

--- a/localisation/english/PB_annexations_l_english.yml
+++ b/localisation/english/PB_annexations_l_english.yml
@@ -13,6 +13,8 @@
   annexation.integration: "Assimilate into our territory."
   annexation.cancel: "Do nothing for now."
 
+  annexations_country_to_be_divided_tt: "§YBy choosing to §!§rdivide§!§Y this country, we will be §!§runable§!§Y to grant the country's main tag any separatist-associated land in subsequent events.\n\n§YThis §!§!§rcannot§!§Y be undone.§!\n\n"
+
   #Decisions + Events
 
   #General Example
