--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8000,30 +8000,30 @@
     PON_cn_ADJ:0 "Pontic"
     PON_an_ADJ:0 "Pontic"
 
-    FAL_ni:0 "Colonie d'Alger"
-    FAL_ni_DEF:0 "the Colonie d'Alger"
-    FAL_ds:0 "Colonie d'Alger"
-    FAL_ds_DEF:0 "the Colonie d'Alger"
-    FAL_rc:0 "Colonie d'Alger"
-    FAL_rc_DEF:0 "the Colonie d'Alger"
-    FAL_an:0 "Colonie d'Alger"
-    FAL_an_DEF:0 "the Colonie d'Alger"
-    FAL_cn:0 "Colonie d'Alger"
-    FAL_cn_DEF:0 "the Colonie d'Alger"
-    FAL_lb:0 "Colonie d'Alger"
-    FAL_lb_DEF:0 "the Colonie d'Alger"
-    FAL_ss:0 "Colonie d'Alger"
-    FAL_ss_DEF:0 "the Colonie d'Alger"
-    FAL_jc:0 "Pontic Commune"
-    FAL_jc_DEF:0 "the Colonie d'Alger"
-    FAL_ni_ADJ:0 "French-Algerian"
-    FAL_rc_ADJ:0 "French-Algerian"
-    FAL_lb_ADJ:0 "French-Algerian"
-    FAL_ss_ADJ:0 "French-Algerian"
-    FAL_jc_ADJ:0 "French-Algerian"
-    FAL_ds_ADJ:0 "French-Algerian"
-    FAL_cn_ADJ:0 "French-Algerian"
-    FAL_an_ADJ:0 "French-Algerian"
+    FAL_ni:0 "Newfoundland-Labrador"
+    FAL_ni_DEF:0 "The Republic of Newfoundland-Labrador"
+    FAL_ds:0 "Newfoundland-Labrador"
+    FAL_ds_DEF:0 "The Republic of Newfoundland-Labrador"
+    FAL_rc:0 "Newfoundland-Labrador"
+    FAL_rc_DEF:0 "The Republic of Newfoundland-Labrador"
+    FAL_an:0 "Newfoundland-Labrador"
+    FAL_an_DEF:0 "The Republic of Newfoundland-Labrador"
+    FAL_cn:0 "Newfoundland-Labrador"
+    FAL_cn_DEF:0 "The Republic of Newfoundland-Labrador"
+    FAL_lb:0 "Newfoundland-Labrador"
+    FAL_lb_DEF:0 "The Republic of Newfoundland-Labrador"
+    FAL_ss:0 "Newfoundland-Labrador"
+    FAL_ss_DEF:0 "The Republic of Newfoundland-Labrador"
+    FAL_jc:0 "Newfoundland-Labrador"
+    FAL_jc_DEF:0 "The Republic of Newfoundland-Labrador"
+    FAL_ni_ADJ:0 "Newfoundlander"
+    FAL_rc_ADJ:0 "Newfoundlander"
+    FAL_lb_ADJ:0 "Newfoundlander"
+    FAL_ss_ADJ:0 "Newfoundlander"
+    FAL_jc_ADJ:0 "Newfoundlander"
+    FAL_ds_ADJ:0 "Newfoundlander"
+    FAL_cn_ADJ:0 "Newfoundlander"
+    FAL_an_ADJ:0 "Newfoundlander"
 
     WAF_ni:0 "Commonwealth of Carnegia"
     WAF_ni_DEF:0 "the Commonwealth of Carnegia"
