Basque Standardization & some new portraits

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -1197,6 +1197,9 @@
   ITA_ds_party:0 "FAI"
   ITA_ds_party_long:0 "Forze Armate Italiane"
 
+  BSQ_an_party_long:0 "Partido Republicano Radical"
+  BSQ_an_party:0 "PRR"
+
   ADR_jc_party:0 "JA"
   ADR_jc_party_long:0 "Joves Andorrans"
   ADR_ss_party:0 "Socialistes"
