Annexation Decisions Work on France and Spain

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -5535,6 +5535,81 @@
   SPR_Occupied_Monarchy_cn_ADJ:0 "Spanish"
   SPR_Occupied_Monarchy_an_ADJ:0 "Spanish"
 
+  SPR_Occupied_Republic_ni:0 "National Union of Spain"
+  SPR_Occupied_Republic_ni_DEF:0 "The Spanish National Unitary State"
+  SPR_Occupied_Republic_ds:0 "Second Spanish Republic"
+  SPR_Occupied_Republic_ds_DEF:0 "The Second Spanish Republic"
+  SPR_Occupied_Republic_rc:0 "Second Spanish Republic"
+  SPR_Occupied_Republic_rc_DEF:0 "The Second Spanish Republic"
+  SPR_Occupied_Republic_an:0 "Second Spanish Republic"
+  SPR_Occupied_Republic_an_DEF:0 "The Second Spanish Republic"
+  SPR_Occupied_Republic_cn:0 "Second Spanish Republic"
+  SPR_Occupied_Republic_cn_DEF:0 "The Second Spanish Republic"
+  SPR_Occupied_Republic_lb:0 "Second Spanish Republic"
+  SPR_Occupied_Republic_lb_DEF:0 "The Second Spanish Republic"
+  SPR_Occupied_Republic_ss:0 "Second Spanish Republic"
+  SPR_Occupied_Republic_ss_DEF:0 "The Second Spanish Republic"
+  SPR_Occupied_Republic_jc:0 "Civic Republic of the Spanish People"
+  SPR_Occupied_Republic_jc_DEF:0 "The Civic Republic of the Spanish People"
+  SPR_Occupied_Republic_ni_ADJ:0 "Spanish"
+  SPR_Occupied_Republic_rc_ADJ:0 "Spanish"
+  SPR_Occupied_Republic_lb_ADJ:0 "Spanish"
+  SPR_Occupied_Republic_ss_ADJ:0 "Spanish"
+  SPR_Occupied_Republic_jc_ADJ:0 "Spanish"
+  SPR_Occupied_Republic_ds_ADJ:0 "Spanish"
+  SPR_Occupied_Republic_cn_ADJ:0 "Spanish"
+  SPR_Occupied_Republic_an_ADJ:0 "Spanish"
+
+  CAT_Occupied_Monarchy_ni:0 "Kingdom of Aragon"
+  CAT_Occupied_Monarchy_ni_DEF:0 "The New Kingdom of Aragon"
+  CAT_Occupied_Monarchy_ds:0 "Kingdom of Aragon"
+  CAT_Occupied_Monarchy_ds_DEF:0 "The New Kingdom of Aragon"
+  CAT_Occupied_Monarchy_rc:0 "Kingdom of Aragon"
+  CAT_Occupied_Monarchy_rc_DEF:0 "The New Kingdom of Aragon"
+  CAT_Occupied_Monarchy_an:0 "Kingdom of Aragon"
+  CAT_Occupied_Monarchy_an_DEF:0 "The New Kingdom of Aragon"
+  CAT_Occupied_Monarchy_cn:0 "Kingdom of Aragon"
+  CAT_Occupied_Monarchy_cn_DEF:0 "The New Kingdom of Aragon"
+  CAT_Occupied_Monarchy_lb:0 "Kingdom of Aragon"
+  CAT_Occupied_Monarchy_lb_DEF:0 "The New Kingdom of Aragon"
+  CAT_Occupied_Monarchy_ss:0 "Kingdom of Aragon"
+  CAT_Occupied_Monarchy_ss_DEF:0 "The New Kingdom of Aragon"
+  CAT_Occupied_Monarchy_jc:0 "Kingdom of Aragon"
+  CAT_Occupied_Monarchy_jc_DEF:0 "The New Kingdom of Aragon"
+  CAT_Occupied_Monarchy_ni_ADJ:0 "Catalan"
+  CAT_Occupied_Monarchy_rc_ADJ:0 "Catalan"
+  CAT_Occupied_Monarchy_lb_ADJ:0 "Catalan"
+  CAT_Occupied_Monarchy_ss_ADJ:0 "Catalan"
+  CAT_Occupied_Monarchy_jc_ADJ:0 "Catalan"
+  CAT_Occupied_Monarchy_ds_ADJ:0 "Catalan"
+  CAT_Occupied_Monarchy_cn_ADJ:0 "Catalan"
+  CAT_Occupied_Monarchy_an_ADJ:0 "Catalan"
+
+  ADL_Occupied_Monarchy_ni:0 "Principality of Andalusia"
+  ADL_Occupied_Monarchy_ni_DEF:0 "The Principality of Andalusia"
+  ADL_Occupied_Monarchy_ds:0 "Principality of Andalusia"
+  ADL_Occupied_Monarchy_ds_DEF:0 "The Principality of Andalusia"
+  ADL_Occupied_Monarchy_rc:0 "Principality of Andalusia"
+  ADL_Occupied_Monarchy_rc_DEF:0 "The Principality of Andalusia"
+  ADL_Occupied_Monarchy_an:0 "Principality of Andalusia"
+  ADL_Occupied_Monarchy_an_DEF:0 "The Principality of Andalusia"
+  ADL_Occupied_Monarchy_cn:0 "Principality of Andalusia"
+  ADL_Occupied_Monarchy_cn_DEF:0 "The Principality of Andalusia"
+  ADL_Occupied_Monarchy_lb:0 "Principality of Andalusia"
+  ADL_Occupied_Monarchy_lb_DEF:0 "The Principality of Andalusia"
+  ADL_Occupied_Monarchy_ss:0 "Principality of Andalusia"
+  ADL_Occupied_Monarchy_ss_DEF:0 "The Principality of Andalusia"
+  ADL_Occupied_Monarchy_jc:0 "Principality of Andalusia"
+  ADL_Occupied_Monarchy_jc_DEF:0 "The Principality of Andalusia"
+  ADL_Occupied_Monarchy_ni_ADJ:0 "Andalusian"
+  ADL_Occupied_Monarchy_rc_ADJ:0 "Andalusian"
+  ADL_Occupied_Monarchy_lb_ADJ:0 "Andalusian"
+  ADL_Occupied_Monarchy_ss_ADJ:0 "Andalusian"
+  ADL_Occupied_Monarchy_jc_ADJ:0 "Andalusian"
+  ADL_Occupied_Monarchy_ds_ADJ:0 "Andalusian"
+  ADL_Occupied_Monarchy_cn_ADJ:0 "Andalusian"
+  ADL_Occupied_Monarchy_an_ADJ:0 "Andalusian"
+
   JAP_Occupied_Monarchy_ni:0 "Kingdom of Japan"
   JAP_Occupied_Monarchy_ni_DEF:0 "The Kingdom of Japan"
   JAP_Occupied_Monarchy_ds:0 "Kingdom of Japan"
