Sikh Stuff & new flags

--- a/localisation/english/PB_country_specific/India/PB_Jammu_Kashmir_l_english.yml
+++ b/localisation/english/PB_country_specific/India/PB_Jammu_Kashmir_l_english.yml
@@ -5,5 +5,8 @@
   ######################
 
   ### LEADERS ###
+  JKM_duleep_singh: "Duleep Singh"
+
+  ### GENERALS ###
   JKM_hari_singh: "Hari Singh"
   
