UK annexations WIP

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -5610,6 +5610,31 @@
   ADL_Occupied_Monarchy_cn_ADJ:0 "Andalusian"
   ADL_Occupied_Monarchy_an_ADJ:0 "Andalusian"
 
+  WLA_Occupied_Monarchy_ni:0 "Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_ni_DEF:0 "The Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_ds:0 "Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_ds_DEF:0 "The Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_rc:0 "Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_rc_DEF:0 "The Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_an:0 "Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_an_DEF:0 "The Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_cn:0 "Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_cn_DEF:0 "The Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_lb:0 "Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_lb_DEF:0 "The Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_ss:0 "Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_ss_DEF:0 "The Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_jc:0 "Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_jc_DEF:0 "The Kingdom of Wallonia"
+  WLA_Occupied_Monarchy_ni_ADJ:0 "Walloon"
+  WLA_Occupied_Monarchy_rc_ADJ:0 "Walloon"
+  WLA_Occupied_Monarchy_lb_ADJ:0 "Walloon"
+  WLA_Occupied_Monarchy_ss_ADJ:0 "Walloon"
+  WLA_Occupied_Monarchy_jc_ADJ:0 "Walloon"
+  WLA_Occupied_Monarchy_ds_ADJ:0 "Walloon"
+  WLA_Occupied_Monarchy_cn_ADJ:0 "Walloon"
+  WLA_Occupied_Monarchy_an_ADJ:0 "Walloon"
+
   JAP_Occupied_Monarchy_ni:0 "Kingdom of Japan"
   JAP_Occupied_Monarchy_ni_DEF:0 "The Kingdom of Japan"
   JAP_Occupied_Monarchy_ds:0 "Kingdom of Japan"
@@ -5636,7 +5661,7 @@
   JAP_Occupied_Monarchy_an_ADJ:0 "Japanese"
 
   DGG_AD_condominium: "Anglo-Dutch Doggerland"
-  DGG_AD_condominium_DEF: "the Anglo-Dutch Condominium of the Doggerland"
+  DGG_AD_condominium_DEF: "The Anglo-Dutch Condominium of the Doggerland"
   DGG_AD_condominium_ADJ: "Doggerlander"
 
   JKM_sikh_reforged: "Reforged Realm of Sikh"
