Tweaks for Haiti

--- a/localisation/english/PB_country_specific/PB_Haiti_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Haiti_l_english.yml
@@ -18,7 +18,9 @@
   ##########################
   # COSMETIC TAGS
   ##########################
-
+  HAI_American_Dependency: "Territory of Haiti"
+  HAI_American_Dependency_long: "the Joint Government of the Territoriy of Haiti"
+  
   ##########################
   # IDEAS
   ##########################
