Generic Icons work p1 plus uh other stuff?
Neo Imperialist Path Icons

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -1618,6 +1618,22 @@
   SAU_ni_party:0 "Ikhwan Fanatics"
   SAU_ni_party_long:0 "Ikhwan Fanatics"
 
+  PHI_jc_party:0 "Sakdalistas"
+  PHI_jc_party_long:0 "Sakdalistas"
+  PHI_ss_party:0 "Magdiwang"
+  PHI_ss_party_long:0 "Magdiwang"
+  PHI_lb_party:0 "Propaganda Movement"
+  PHI_lb_party_long:0 "Propaganda Movement"
+  PHI_cn_party:0 "Magdalo"
+  PHI_cn_party_long:0 "Magdalo"
+  PHI_an_party:0 "Magdalo-Yanco Clique"
+  PHI_an_party_long:0 "Magdalo-Yanco Clique"
+  PHI_rc_party:0 "Escuadrón 201"
+  PHI_rc_party_long:0 "Escuadrón 201"
+  PHI_ds_party:0 "Ejército Revolucionario Filipino"
+  PHI_ds_party_long:0 "Ejército Revolucionario Filipino"
+  PHI_ni_party:0 "Makagiting"
+  PHI_ni_party_long:0 "Makagiting"
 
  ############
  # POLITICAL PARTY TEMPLATE 
