--- a/localisation/english/PB_country_specific/PB_Spain_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Spain_l_english.yml
@@ -32,6 +32,34 @@ SPR_jc_party_long:0 "Partido Popular Ibérica Jacobina"
 SPR_jc_party:0 "PPIJ"
 
 
+  ######################
+  ####  CHARACTERS  ####
+  ######################
+
+  ### LEADERS ###
+SPR_angel_oria: "Ángel Herrera Oria"
+SPR_antonio_rivera: "José Antonio Primo de Rivera"
+SPR_fal_conde: "Manuel Fal Conde"
+SPR_gil_robles: "José María Gil-Robles"
+SPR_manuel_azana: "Manuel Azaña"
+SPR_largo_caballero: "Francisco Largo Caballero"
+SPR_joaquin_maurin: "Joaquín Maurín"
+
+  ### FIELD MARSHALS ###
+SPR_juan_yague: "Juan Yagüe"
+SPR_manuel_llopis: "Manuel Goded Llopis"
+SPR_emilio_mola: "Emilio Mola"
+
+  ### GENERALS ###
+SPR_fransisco_franco: "Franisco Franco"
+SPR_carlos_cabanillas: "Carlos Asensio Cabanillas"
+SPR_gonzalo_llano: "Gonzalo Queipo de Llano"
+SPR_jose_astray: "José Millán-Astray"
+SPR_jose_sanjurjo: "José Sanjurjo"
+SPR_antonio_rivera: "José Antonio Primo de Rivera"
+SPR_fermin_galan: "Fermín Galán"
+SPR_antonio_aranda: "Antonio Aranda"
+SPR_juan_vigon: "Juan Vigón"
 
   ##########################
   # MINISTERS
