France scientists portraits

--- a/localisation/english/PB_country_specific/PB_France_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_France_l_english.yml
@@ -116,13 +116,14 @@
   # NAVAL
   FRA_paul_pons: "Paul-Marie Pons"
   # AIR
-  FRA_rene_dorand: "René Dorand"
+  FRA_louis_charles_breguet: "Louis Charles Breguet"
   FRA_emile_dewoitine: "Émile Dewoitine"
   # PHYSICS
   FRA_louis_broglie: "Louis de Broglie"
+  FRA_little_henri: "Little Henri"
   # BIOCHEM
   FRA_andre_lwoff: "André Lwoff"
-  FRA_emile_roux: "Émile Roux"
+  FRA_theodore_monod: "Théodore Monod"
   ### OPERATIVES ###
   FRA_jeannie_rousseau: "Jeannie Yvonne Ghislaine Rousseau"
   FRA_marie_fourcade: "Marie Madeleine Fourcade"
