More South American generals, Spanish leader + fix

--- a/localisation/english/PB_country_specific/PB_German_East_Africa_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_German_East_Africa_l_english.yml
@@ -4,4 +4,4 @@
   ######################
 
   ### LEADERS ###
-  DEA_bayume_mohamed_husen: "Bayume Mohamed Husen"
+  DEA_bayume_husen: "Bayume Mohamed Husen"
