--- a/localisation/english/PB_country_specific/PB_New_Granada_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_New_Granada_l_english.yml
@@ -10,4 +10,7 @@
 
  ### FIELD MARSHALS ###
   NWG_miguel_rivera: "Miguel Primo de Rivera"
-  
+
+ ### GENERALS ###
+  NWG_fal_conde: "Manuel Fal Conde"
+  NWG_jose_varela: "José Enrique Varela"
