--- a/localisation/english/PB_country_specific/PB_Peru_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Peru_l_english.yml
@@ -14,6 +14,7 @@
   ### GENERALS ###
   CHR_ibanez: "Carlos Ibáñez del Campo"
   CHR_busch: "Germán Busch"
+  CHR_silvestre: "Manuel Fernández Silvestre"
 
   ### ADMIRALS ###
   CHR_miguel_grau: "Miguel Grau"
