--- a/localisation/english/PB_country_specific/PB_Spain_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Spain_l_english.yml
@@ -39,11 +39,12 @@ SPR_jc_party:0 "PPIJ"
   ### LEADERS ###
 SPR_angel_oria: "Ángel Herrera Oria"
 SPR_antonio_rivera: "José Antonio Primo de Rivera"
-SPR_fal_conde: "Manuel Fal Conde"
+SPR_de_mella: "Juan Vázquez de Mella"
 SPR_gil_robles: "José María Gil-Robles"
 SPR_manuel_azana: "Manuel Azaña"
 SPR_largo_caballero: "Francisco Largo Caballero"
 SPR_joaquin_maurin: "Joaquín Maurín"
+SPR_madariaga: "Salvador de Madariaga"
 
   ### FIELD MARSHALS ###
 SPR_juan_yague: "Juan Yagüe"
