--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8733,22 +8733,22 @@
     FRK_DEF:0 "the Kingdom of Hessen"
     FRK_ADJ:0 "Rhenish"
 
-    MLT_ni:0 "Maltese Protectorate"
-    MLT_ni_DEF:0 "The Crown Colony of Malta"
-    MLT_ds:0 "Maltese Protectorate"
-    MLT_ds_DEF:0 "The Crown Colony of Malta"
-    MLT_rc:0 "Maltese Protectorate"
-    MLT_rc_DEF:0 "The Crown Colony of Malta"
-    MLT_an:0 "Maltese Protectorate"
-    MLT_an_DEF:0 "The Crown Colony of Malta"
-    MLT_cn:0 "Maltese Protectorate"
-    MLT_cn_DEF:0 "The Crown Colony of Malta"
-    MLT_lb:0 "Maltese Protectorate"
-    MLT_lb_DEF:0 "The Crown Colony of Malta"
-    MLT_ss:0 "Maltese Protectorate"
-    MLT_ss_DEF:0 "The Crown Colony of Malta"
-    MLT_jc:0 "Maltese Protectorate"
-    MLT_jc_DEF:0 "The Crown Colony of Malta"
+    MLT_ni:0 "Order of Malta"
+    MLT_ni_DEF:0 "Monastic State of the Order of Saint John of Jerusalem"
+    MLT_ds:0 "Order of Malta"
+    MLT_ds_DEF:0 "Monastic State of the Order of Saint John of Jerusalem"
+    MLT_rc:0 "Order of Malta"
+    MLT_rc_DEF:0 "Monastic State of the Order of Saint John of Jerusalem"
+    MLT_an:0 "State of Malta"
+    MLT_an_DEF:0 "State of Malta"
+    MLT_cn:0 "State of Malta"
+    MLT_cn_DEF:0 "State of Malta"
+    MLT_lb:0 "Republic of Malta"
+    MLT_lb_DEF:0 "Republic of Malta"
+    MLT_ss:0 "Republic of Malta"
+    MLT_ss_DEF:0 "Republic of Malta"
+    MLT_jc:0 "Communion of Malta"
+    MLT_jc_DEF:0 "Holy Communion of the Maltese Peoples"
     MLT_ni_ADJ:0 "Maltese"
     MLT_rc_ADJ:0 "Maltese"
     MLT_lb_ADJ:0 "Maltese"
