--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -1499,22 +1499,22 @@
   ASK_ni_party:0 "Legionary Party"
   ASK_ni_party_long:0 "Legionary Party of Russian America"
 
-  MLT_jc_party:0 "MRPP"
-  MLT_jc_party_long:0 "Maltese Revolutionary People's Party"
-  MLT_ss_party:0 "Labour Party"
-  MLT_ss_party_long:0 "Labour Party of Malta"
-  MLT_lb_party:0 "Constitutional Party"
-  MLT_lb_party_long:0 "Constitutionalist Party of Malta"
-  MLT_cn_party:0 "CDP"
-  MLT_cn_party_long:0 "Christian Democratic Party of Malta"
-  MLT_rc_party:0 "Irredentists"
-  MLT_rc_party_long:0 "Various Italian Irredentist Factions"
-  MLT_an_party:0 "EIEC(M)"
-  MLT_an_party_long:0 "Edison Imperial Electric Company Branch in Malta"
-  MLT_ds_party:0 "British Expeditionary Administration"
-  MLT_ds_party_long:0 "Joint Royal Navy & Army Administration of the Maltese Protectorate"
-  MLT_ni_party:0 "Knights of Malta"
-  MLT_ni_party_long:0 "Sovereign Military Hospitaller Order of Saint John of Jerusalem, of Rhodes and of Malta"
+  MLT_jc_party:0 "BGS"
+  MLT_jc_party_long:0 "Brotherhood of Good Samaritans"
+  MLT_ss_party:0 "PM - Egalitarians"
+  MLT_ss_party_long:0 "Parish Movement - Egalitarian Faction"
+  MLT_lb_party:0 "PM - Liberals"
+  MLT_lb_party_long:0 "Parish Movement - Liberal Faction"
+  MLT_cn_party:0 "MSP"
+  MLT_cn_party_long:0 "Movement of St. Paul the Apostle"
+  MLT_rc_party:0 "Archdiocese of Malta"
+  MLT_rc_party_long:0 "Archdiocese of Malta"
+  MLT_an_party:0 "Merchant Clique"
+  MLT_an_party_long:0 "Merchant Clique"
+  MLT_ds_party:0 "SMOM - Moderates"
+  MLT_ds_party_long:0 "The Sovereign Military Hospitaller Order of Saint John of Jerusalem, of Rhodes and of Malta - Moderate Faction"
+  MLT_ni_party:0 "SMOM - Inquisitionists"
+  MLT_ni_party_long:0 "The Sovereign Military Hospitaller Order of Saint John of Jerusalem, of Rhodes and of Malta - Inquisitionist Faction"
   
   WIS_jc_party:0 "LANDS"
   WIS_jc_party_long:0 "Left Alliance for National Democracy and Socialism"
