Japanese Scientists & Spanish America stuff

--- a/localisation/english/PB_country_specific/PB_Japan_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Japan_l_english.yml
@@ -36,6 +36,14 @@
   PB_JAP_Hashimoto_Rule4:0 "Hashimoto's Rule - Independent Stance"
   PB_JAP_Hashimoto_Rule5:0 "Hashimoto's Rule - Jiritsu Embraced"
 
+ ### SCIENTISTS ###
+
+  # AIR
+  JAP_jiro_horikoshi: "Jiro Horikoshi"
+  # BIOCHEM
+  JAP_shiro_ishii: "Shirō Ishii"
+  
+
   ##########################
   # FOCUSES
   ##########################
