--- a/localisation/english/PB_country_specific/PB_New_Granada_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_New_Granada_l_english.yml
@@ -14,3 +14,4 @@
  ### GENERALS ###
   NWG_fal_conde: "Manuel Fal Conde"
   NWG_jose_varela: "José Enrique Varela"
+  NWG_ricardo_peral: "Ricardo Rada Peral"
