--- a/localisation/english/PB_country_specific/PB_Acadia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Acadia_l_english.yml
@@ -18,30 +18,30 @@
   # COUNTRIES
   ##########################
 
- ACD_ni:0 "Louisiana"
- ACD_ni_DEF:0 "The State of Louisiana"
- ACD_rc:0 "Acadia"
- ACD_rc_DEF:0 "The Anglo-French Trust Territory of Acadia"
- ACD_lb:0 "Acadia"
- ACD_lb_DEF:0 "The Anglo-French Trust Territory of Acadia"
- ACD_ss:0 "Acadia"
- ACD_ss_DEF:0 "The Anglo-French Trust Territory of Acadia"
- ACD_jc:0 "Acadia"
- ACD_jc_DEF:0 "The Anglo-French Trust Territory of Acadia"
- ACD_an:0 "Acadia"
- ACD_an_DEF:0 "The Anglo-French Trust Territory of Acadia"
- ACD_ds:0 "Acadia"
- ACD_ds_DEF:0 "The Anglo-French Trust Territory of Acadia"
- ACD_cn:0 "Acadia"
- ACD_cn_DEF:0 "The Anglo-French Trust Territory of Acadia"
- ACD_ni_ADJ:0 "Louisianian"
- ACD_rc_ADJ:0 "Acadian"
- ACD_lb_ADJ:0 "Acadian"
- ACD_ss_ADJ:0 "Acadian"
- ACD_jc_ADJ:0 "Acadian"
- ACD_ds_ADJ:0 "Acadian"
- ACD_cn_ADJ:0 "Acadian"
- ACD_an_ADJ:0 "Acadian"
+  ACD_ni:0 "Louisiana"
+  ACD_ni_DEF:0 "The State of Louisiana"
+  ACD_rc:0 "Anglo-French Trust Territory of Acadia"
+  ACD_rc_DEF:0 "The Anglo-French Trust Territory of Acadia"
+  ACD_lb:0 "Anglo-French Trust Territory of Acadia"
+  ACD_lb_DEF:0 "The Anglo-French Trust Territory of Acadia"
+  ACD_ss:0 "Anglo-French Trust Territory of Acadia"
+  ACD_ss_DEF:0 "The Anglo-French Trust Territory of Acadia"
+  ACD_jc:0 "Anglo-French Trust Territory of Acadia"
+  ACD_jc_DEF:0 "The Anglo-French Trust Territory of Acadia"
+  ACD_an:0 "Anglo-French Trust Territory of Acadia"
+  ACD_an_DEF:0 "The Anglo-French Trust Territory of Acadia"
+  ACD_ds:0 "Anglo-French Trust Territory of Acadia"
+  ACD_ds_DEF:0 "The Anglo-French Trust Territory of Acadia"
+  ACD_cn:0 "Anglo-French Trust Territory of Acadia"
+  ACD_cn_DEF:0 "The Anglo-French Trust Territory of Acadia"
+  ACD_ni_ADJ:0 "Louisianian"
+  ACD_rc_ADJ:0 "Acadian"
+  ACD_lb_ADJ:0 "Acadian"
+  ACD_ss_ADJ:0 "Acadian"
+  ACD_jc_ADJ:0 "Acadian"
+  ACD_ds_ADJ:0 "Acadian"
+  ACD_cn_ADJ:0 "Acadian"
+  ACD_an_ADJ:0 "Acadian"
 
   ##########################
   # IDEAS
