--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -327,7 +327,7 @@
  VICTORY_POINTS_9627: "Laibach"
 #103 - DALMATIA
  VICTORY_POINTS_6889: "Dubrovnik"
- VICTORY_POINTS_3924: "Split"
+ VICTORY_POINTS_3924: "Spalatro"
  VICTORY_POINTS_3943: "Zadar"
 #104 - BOSNIA
  VICTORY_POINTS_11899: "Sarajevo"
