Some new flags & random stuff

--- a/localisation/english/PB_country_specific/PB_New_Granada_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_New_Granada_l_english.yml
@@ -15,3 +15,12 @@
   NWG_fal_conde: "Manuel Fal Conde"
   NWG_jose_varela: "José Enrique Varela"
   NWG_ricardo_peral: "Ricardo Rada Peral"
+
+  ##########################
+  # IDEAS
+  ##########################
+
+  PB_NWG_Cyber_Cruzada:0 "Jaimes' Conquistadors"
+  PB_NWG_Cyber_Cruzada_desc:0 "WIP"
+
+  
