--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1554,12 +1554,12 @@
  VICTORY_POINTS_5112: "Santos"
  VICTORY_POINTS_10513: "São Paulo"
 #502 - RIO GRANDE DO SUL
- VICTORY_POINTS_14554: "Porto Alegre"
+ VICTORY_POINTS_14554: "Puerto Alegre"
  VICTORY_POINTS_7638: "Pelotas"
  VICTORY_POINTS_1598: "Santa Maria"
- VICTORY_POINTS_4604: "Santana do Livramento"
- VICTORY_POINTS_1585: "São Borja"
- VICTORY_POINTS_1542: "Vacaria"
+ VICTORY_POINTS_4604: "Ciudad de Dorrego"
+ VICTORY_POINTS_1585: "San Borja"
+ VICTORY_POINTS_1542: "Vaquería de los Pinares"
 #503 - PARANA
  VICTORY_POINTS_14632: "Curitiba"
  VICTORY_POINTS_8239: "Ponta Grossa"
