Spanish Scienists & stuff for them + Latin America Changes

--- a/localisation/english/PB_country_specific/PB_New_Granada_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_New_Granada_l_english.yml
@@ -22,5 +22,7 @@
 
   PB_NWG_Cyber_Cruzada:0 "Jaimes' Conquistadors"
   PB_NWG_Cyber_Cruzada_desc:0 "WIP"
+  PB_NWG_1v1_lilbro:0 "Hundred Years' War"
+  PB_NWG_1v1_lilbro_desc:0 "WIP"
 
   
