--- a/localisation/english/PB_country_specific/PB_Spain_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Spain_l_english.yml
@@ -69,6 +69,16 @@ SPR_fermin_galan: "Fermín Galán"
 SPR_antonio_aranda: "Antonio Aranda"
 SPR_juan_vigon: "Juan Vigón"
 
+  ### SCIENTISTS ###
+
+  # LAND
+SPR_wilfredo_ricart: "Wifredo Ricart"
+SPR_eduardo_torroja: "Eduardo Torroja"
+  # AIR
+SPR_juan_cierva: "Juan de la Cierva"
+  # PHYSICS
+SPR_monico_moreno: "Mónico Sánchez Moreno"
+
   ##########################
   # MINISTERS
   ##########################
