Wallonia Release Decisions

--- a/localisation/english/PB_annexations_l_english.yml
+++ b/localisation/english/PB_annexations_l_english.yml
@@ -58,6 +58,15 @@
   annexation.1016.b: "Restore the Portuguese Braganza Monarchy"
   annexation.1016.c: "Return it to the Exiled Monarchy"
 
+  annexation_wallonia: "The Fate of Wallonia"
+  annexation_wallonia_desc: "The region of Wallonia has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.1025.a: "Re-establish an independent Wallonia"
+
+  annexation_calais_corridor: "The Future of the Dunkerque Corridor"
+  annexation_calais_corridor_desc: "We've established our control over the formerly Walloon territory of the Dunkerque Corridor, we must now decide what to do with it."
+  annexation.1026.a: "Return the Corridor to Wallonia"
+  annexation.1026.b: "Return the Corridor to France"
+
   annexation.give_to_spain: "Give it to Spain"
 
   annexation_decision_galicia: "The Fate of Galicia"
