Netherlands Releasables WIP

--- a/localisation/english/PB_annexations_l_english.yml
+++ b/localisation/english/PB_annexations_l_english.yml
@@ -67,6 +67,14 @@
   annexation.1026.a: "Return the Corridor to Wallonia"
   annexation.1026.b: "Return the Corridor to France"
 
+  annexation_netherlands: "The Occupation of the Netherlands"
+  annexation_netherlands_desc: "The region of the Netherlands has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.1027.a: "Re-establish the Dutch state"
+
+  annexation_flanders: "The Fate of Dutch Flanders"
+  annexation_flanders_desc: "The Flemish region of the Netherlands has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.1028.a: "Establish an independent Flemish state"
+
   annexation.give_to_spain: "Give it to Spain"
 
   annexation_decision_galicia: "The Fate of Galicia"
