--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -5635,6 +5635,56 @@
   WLA_Occupied_Monarchy_cn_ADJ:0 "Walloon"
   WLA_Occupied_Monarchy_an_ADJ:0 "Walloon"
 
+  HOL_Occupied_Monarchy_ni:0 "Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_ni_DEF:0 "The Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_ds:0 "Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_ds_DEF:0 "The Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_rc:0 "Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_rc_DEF:0 "The Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_an:0 "Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_an_DEF:0 "The Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_cn:0 "Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_cn_DEF:0 "The Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_lb:0 "Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_lb_DEF:0 "The Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_ss:0 "Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_ss_DEF:0 "The Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_jc:0 "Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_jc_DEF:0 "The Kingdom of the Netherlands"
+  HOL_Occupied_Monarchy_ni_ADJ:0 "Dutch"
+  HOL_Occupied_Monarchy_rc_ADJ:0 "Dutch"
+  HOL_Occupied_Monarchy_lb_ADJ:0 "Dutch"
+  HOL_Occupied_Monarchy_ss_ADJ:0 "Dutch"
+  HOL_Occupied_Monarchy_jc_ADJ:0 "Dutch"
+  HOL_Occupied_Monarchy_ds_ADJ:0 "Dutch"
+  HOL_Occupied_Monarchy_cn_ADJ:0 "Dutch"
+  HOL_Occupied_Monarchy_an_ADJ:0 "Dutch"
+
+  FLA_Occupied_Monarchy_ni:0 "Flemish Principality"
+  FLA_Occupied_Monarchy_ni_DEF:0 "The Flemish Principality"
+  FLA_Occupied_Monarchy_ds:0 "Flemish Principality"
+  FLA_Occupied_Monarchy_ds_DEF:0 "The Flemish Principality"
+  FLA_Occupied_Monarchy_rc:0 "Flemish Principality"
+  FLA_Occupied_Monarchy_rc_DEF:0 "The Flemish Principality"
+  FLA_Occupied_Monarchy_an:0 "Flemish Principality"
+  FLA_Occupied_Monarchy_an_DEF:0 "The Flemish Principality"
+  FLA_Occupied_Monarchy_cn:0 "Flemish Principality"
+  FLA_Occupied_Monarchy_cn_DEF:0 "The Flemish Principality"
+  FLA_Occupied_Monarchy_lb:0 "Flemish Principality"
+  FLA_Occupied_Monarchy_lb_DEF:0 "The Flemish Principality"
+  FLA_Occupied_Monarchy_ss:0 "Flemish Principality"
+  FLA_Occupied_Monarchy_ss_DEF:0 "The Flemish Principality"
+  FLA_Occupied_Monarchy_jc:0 "Flemish Principality"
+  FLA_Occupied_Monarchy_jc_DEF:0 "The Flemish Principality"
+  FLA_Occupied_Monarchy_ni_ADJ:0 "Flemish"
+  FLA_Occupied_Monarchy_rc_ADJ:0 "Flemish"
+  FLA_Occupied_Monarchy_lb_ADJ:0 "Flemish"
+  FLA_Occupied_Monarchy_ss_ADJ:0 "Flemish"
+  FLA_Occupied_Monarchy_jc_ADJ:0 "Flemish"
+  FLA_Occupied_Monarchy_ds_ADJ:0 "Flemish"
+  FLA_Occupied_Monarchy_cn_ADJ:0 "Flemish"
+  FLA_Occupied_Monarchy_an_ADJ:0 "Flemish"
+
   JAP_Occupied_Monarchy_ni:0 "Kingdom of Japan"
   JAP_Occupied_Monarchy_ni_DEF:0 "The Kingdom of Japan"
   JAP_Occupied_Monarchy_ds:0 "Kingdom of Japan"
